syntax = "proto3";

package backend.v1;

import "google/protobuf/timestamp.proto";
import "judge/v1/resources.proto";

// 提出の詳細
message SubmissionDetail {
  int32 id = 1;
  // user
  int32 user_id = 2;
  string username = 3;
  // contest
  optional int32 contest_id = 4; // コンテスト中の提出でなければ null
  // task
  int32 task_id = 5;
  string task_title = 6;
  int32 score = 7;
  // submission
  string lang_id = 8;
  string source_code = 9;
  // judge
  judge.v1.JudgeStatus status = 10; // ジャッジ中は judge.v1.JudgeStatus.WJ
  optional uint32 exec_time_ms = 11; // ジャッジ中はnull
  optional uint32 exec_memory_kib = 12; // ジャッジ中はnull
  repeated TestcaseResult testcase_results = 13; // ジャッジ完了したテストケースの実行情報
  // timestamp
  google.protobuf.Timestamp submitted_at = 14;
  google.protobuf.Timestamp created_at = 15;
  optional google.protobuf.Timestamp updated_at = 16;
}

// 提出一覧用
message SubmissionSummary {
  int32 id = 1;
  // user
  int32 user_id = 2;
  string username = 3;
  // contest
  optional int32 contest_id = 4;
  // task
  int32 task_id = 5;
  string task_title = 6;
  int32 score = 7;
  // submission
  string lang_id = 8;
  // judge
  judge.v1.JudgeStatus judge_status = 9; // ジャッジ中は judge.v1.JudgeStatus.WJ
  optional uint32 exec_time_ms = 10; // ジャッジ中はnull
  optional uint32 exec_memory_kib = 11; // ジャッジ中はnull
  // timestamp
  google.protobuf.Timestamp submitted_at = 12;
}

// テストケース一つあたりの結果
message TestcaseResult {
  string testcase_name = 1;
  judge.v1.JudgeStatus judge_status = 2;
  uint32 exec_time_ms = 3;
  uint32 exec_memory_kib = 4;
}

// ジャッジの途中経過　WA(2/10) など。
message JudgeProgress {
  judge.v1.JudgeStatus status = 1; // ジャッジ済みのケースが全てACであれば UNSPECIFIED そうでなければ最初に出た非ACの結果
  int32 total_testcases = 2; // テストケースの総数
  int32 completed_testcases = 3; // ジャッジ済みのテストケース数
}
